# GiNaC-CLN-CMake

./: CMakeLists.txt  COPYING  README.md
cln/: CMakeLists copy.txt  CMakeLists.txt
ginac/: CMakeLists.txt  INSTALL  NEWS  configure.ac
ginac/check/: check_cra.cpp  check_inifcns.cpp  check_lsolve.cpp  check_matrices.cpp  check_numeric.cpp  error_report.h  exam_archive.cpp  exam_chinrem_gcd.cpp  exam_clifford.cpp  exam_collect.cpp  exam_color.cpp  exam_differentiation.cpp  exam_factor.cpp  exam_heur_gcd.cpp  exam_indexed.cpp  exam_inifcns.cpp  exam_inifcns_elliptic.cpp  exam_inifcns_nstdsums.cpp  exam_inifcns_nstdsums.h  exam_lsolve.cpp  exam_match.cpp  exam_matrices.cpp  exam_misc.cpp  exam_mod_gcd.cpp  exam_normalization.cpp  exam_numeric.cpp  exam_paranoia.cpp  exam_parser.cpp  exam_polygcd.cpp  exam_powerlaws.cpp  exam_pseries.cpp  exam_real_imag.cpp  exam_relational.cpp  exam_sqrfree.cpp  exam_structure.cpp  genex.cpp  randomize_serials.cpp  test_runner.h  time_antipode.cpp  time_dennyfliegner.cpp  (+25 more)
ginac/ginac/: add.cpp  archive.cpp  basic.cpp  clifford.cpp  color.cpp  constant.cpp  constant.h  ex.cpp  excompiler.cpp  expair.cpp  expairseq.cpp  exprseq.cpp  factor.cpp  fail.cpp  fderivative.cpp  function.cppy  function.hppy  idx.cpp  indexed.cpp  inifcns.cpp  inifcns_elliptic.cpp  inifcns_gamma.cpp  inifcns_nstdsums.cpp  inifcns_trans.cpp  integral.cpp  integration_kernel.cpp  lst.cpp  matrix.cpp  mul.cpp  ncmul.cpp  normal.cpp  numeric.cpp  operators.cpp  power.cpp  print.cpp  pseries.cpp  registrar.cpp  relational.cpp  remember.cpp  remember.h  (+7 more)
(+54 files in other folders)
